[package]
name = "jrep"
version = "0.1.3"
authors = ["Joshua Laughner <jllacct119@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "~0.2.0"
clap = { version = "~2.33.0", features = ["yaml"] }
exitcode = "~1.1.0"
regex = "1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
term = "0.7.0"
